# notes

c_cpp/c/: arp.c  byte-stuffing.c  dir.c  dump.c  elegant-list.c  event-read.c  event.h  extractNumbers.c  iface-dump.c  input-read-test.c  iphelper.c  linux-sockets.c  memtest.c  mramtest.c  netwc.c  npipe.c  queue-buffered.c  queue-fifo.c  quicksort.c  signals.c  simple_tcp_test.c  snmp-client.c  system.c  type-manager.c  udpfifo.c
c_cpp/c/crypto_compress-learn/: ssh-client.c  tls-client.c  z-aes.c
c_cpp/c/drv-template/: mydrv.c  mydrv.h
c_cpp/c/ipc_queue/: client.c  common.h  server.c
c_cpp/c/libnl-learn/: build  build_cpp  (+5 more)
c_cpp/cpp/: class-cb.cpp  template-cb-cpp.cpp
plc-build/: build_xplcx.sh  make-release.sh
plc-build/meta-xplcx/: getUbootPatches.py  make-image.sh
python/: getPartOfFile.py  gui-tk.py  progress_bar.py  rndLinWin.py  serial_scr.py
python/tcp/: client.py  server.py
python/udp/: client.py  server.py
qt/builders/: exe.sh  lib.sh
qt/usefull-trash/: Q_PROPERTY_IMPLEMENTATION
shell/cmake-learn/: CMakeLists.txt
shell/dbus-learn/: build  com.roman.client.conf  com.roman.server.conf  dbus-client.c  dbus-server.c
shell/git/: createBranch.sh  createRepo.sh  showUrl.sh
shell/gpg-learn/: gpg-create.sh  gpg-get.sh
shell/openssl/: gen-key.sh  privatekey.pem  publickey.pem  signbin.sh  verify.sh
shell/openvpn/: README  client.conf  nat.sh  server.conf  start.sh
shell/plc-patch/: build.sh  patch_main_update.sh
shell/repo/: branch_to_tag.sh  prep_from_current.sh  prep_from_hardcopy.sh  tag_to_trunk.sh
shell/sed-learn/: CenteringText  sed-script
shell/startup/: mystartup.service  mystartup.sh
shell/strace-learn/: c_write  cpp_cout  strace_printf_test.c
(+216 files in other folders)
